--- a/config.json
+++ b/config.json
@@ -16,26 +16,25 @@
   "resume_url": "https://audran-wol.github.io/Cv_website/",
   "donate_urls": {
     "paypal": "https://paypal.me/AudranWol"
-
   },
   "colors": {
     "light": {
-      "background": "#F9F5D7",
-      "foreground": "#504945",
-      "yellow": "#FABD2F",
-      "green": "#79740E",
-      "gray": "#7C6F64",
-      "blue": "#83A598",
-      "red": "#9D0006"
+      "background": "#A39E9B",
+      "foreground": "#2F1E2E",
+      "yellow": "#FEC418",
+      "green": "#48B685",
+      "gray": "#815BA4",
+      "blue": "#06B6EF",
+      "red": "#EF6155"
     },
     "dark": {
-      "background": "#32302F",
-      "foreground": "#D5C4A1",
+      "background": "#2E3440",
+      "foreground": "#E5E9F0",
       "yellow": "#5E81AC",
-      "green": "#B8BB26",
+      "green": "#A3BE8C",
       "gray": "#88C0D0",
       "blue": "#EBCB8B",
-      "red": "#FB4934"
+      "red": "#BF616A"
     }
   }
 }
